fixed the scrollbar issue

--- a/components/header.module.scss
+++ b/components/header.module.scss
@@ -9,7 +9,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin-bottom: 100px;
+	margin-bottom: 50px;
 }
 
 .container {
@@ -34,6 +34,10 @@
 }
 
 @media only screen and (min-width: 580px) {
+	.header {
+		margin-bottom: 100px;
+	}
+
 	.title {
 		font-size: 56px;
 	}
